@@ -1,3 +1,8 @@
+Sat Dec  7 08:25:00 2013  Richo Healy  <richo@psych0tik.net>
+
+	* test/ruby/test_struct.rb: Add regression test for question marks and
+	  bangs in struct members. [Closes GH-468]
+
 Fri Dec  6 19:33:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* class.c (rb_extract_keywords, rb_get_kwargs): move from
